[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sshand"
version = "0.2.1"
description = "SSH/SFTP MCP server for AI agents — full shell and file access to remote Linux/Unix hosts"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Murad Malik", email = "happymurad23@gmail.com"}]
keywords = ["mcp", "ssh", "sftp", "model-context-protocol"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Shells",
]
dependencies = [
    "fastmcp>=0.1.0",
    "paramiko>=3.0.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0.0",
    "rich>=13.0",
    "questionary>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.urls]
Homepage   = "https://github.com/muradmalik23/sshand"
Repository = "https://github.com/muradmalik23/sshand"
Issues     = "https://github.com/muradmalik23/sshand/issues"
Changelog  = "https://github.com/muradmalik23/sshand/blob/main/CHANGELOG.md"

[project.scripts]
sshand = "server:main"

[tool.setuptools]
py-modules = ["server", "ssh_client", "host_config", "platform_utils", "setup_wizard", "manage"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
ignore_missing_imports = true

[tool.isort]
profile = "black"
line_length = 99

[tool.black]
line-length = 99
